--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <img class="estudante-imagem" src="download.jpeg" alt="foto do Antonio">
                 <h3 class="estudante-nome">Professor Antonio</h3>
                 <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="25231.png" alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="download.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="image.png" alt="icone instagram"></a>
             </div>
        
     </div>
